add more genitive details

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -578,16 +578,487 @@ English, the word "unlike" would be an equivalent.
 
 ### Genitive
 
-The <HisyeoWord is='yë'/> particle precedes this noun phrase.
+The <HisyeoWord is='yë'/> particle precedes this noun phrase. There is a key
+syntactic difference from the other preposition phrases. For noun phrases with a
+genitive role, they appear directly after another noun phrase, they are not
+free-standing constituents of the sentence.
 
-This role is used for a NP that is describing the preceding noun or verb phrase
-in some contextually dependent manner. In English, this represents some of the
-senses of the word "of".
+This role is used for a noun phrase that is either:
+
+- an attribute
+- a possessor, or
+- has some other relationship
+
+to the preceding noun. In English, this represents some of the senses of the
+word "of".
 
 <HisyeoTabs>
   <p>niün bı xoinbo lı fonmot yë kon oncëmon umo.&emsp;<em>"He seemed devoid of human feelings."</em></p>
-  <p>bëmon in cukto köi di niltügu hoi ozüul woküt hön bëmon yë möi düi zomo.&emsp;<em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
+  <p>bëmon in cukto onö köi di niltügu hoi ozüul woküt tö bëmon yë möi düi zomo.&emsp;<em>"The contract can be terminated at any time with the agreement of both parties."</em></p>
 </HisyeoTabs>
+
+:::info Genitive Relationships
+
+Using a genitive preposition phrase can create *many different* relationships
+between two noun phrases. What these relationships are differs depending on the
+context and the words chosen.
+
+Below are a multitude of interesting genitive relationships from around the
+world. Not every example is directly translatable into English using the
+aforemented "of". Often English makes use of alternative prepositions like
+"with", "by", and "for", whereas Hisyëö only has those kinds of prepositions
+attached to a predicate of a sentence (essentially, they are associated to the
+verb of the sentence).
+
+However, equipped with the simple <HisyeoWord is='yë'/> preposition, context,
+and supporting word choices, you can effectively communicate all of these
+genitive relations. If your interlocutor still does not understand, you can make
+use of clarifying words to achieve the specific meaning you were after.
+
+__Descriptive Genitive__ - Specifies some detail of the preceding phrase.
+"described by" or "characterized by" are equivalent English expressions. This is
+a catch-all genitive for when the attribution is ambiguous.
+
+<HisyeoTabs>
+    <p>tömös yë ocüo hünsık&emsp;<em>"book characterized by a red cover"</em> <small>(lit. book of red skin)</small></p>
+</HisyeoTabs>
+
+If you need to explain that the book has a red skin instead of being about red
+skin, you can clarify that the genitive relationship is descriptive by using <HisyeoWord is='di'/>:
+
+<HisyeoTabs>
+    <p>tömös yë di yë ocüo hünsık&emsp;<em></em> <small>(lit. book of a quality of red skin)</small></p>
+</HisyeoTabs>
+
+---
+
+__Possessive Genitive__ - Specifies the preceding phrase as being owned or
+possessed by the attached genitive phrase. "belonging to" or "possessed by" are
+English equivalents.
+
+<HisyeoTabs>
+    <p>cikinil yë zonwul&emsp;<em>"ear belonging to an animal"</em> <small>(lit. ear of animal)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is possessive by using <HisyeoWord is='yünyoü'/>: 
+
+<HisyeoTabs>
+    <p>cikinil yë yünyoü yë zonwul&emsp;<small>(lit. ear of possession of animal)</small></p>
+</HisyeoTabs>
+
+---
+
+__Familial Genitive__ - Specifies the preceding phrase as having a familial
+relationship with the attached genitive phrase. "related to" is an equivalent
+English expression. This is considered a subset of Possessive Genitive.
+
+<HisyeoTabs>
+    <p>motüo yë motüo noyo&emsp;<em>"mother related to my mother"</em> <small>(lit. mother of my mother)</small></p>
+</HisyeoTabs>
+
+You can clarify a genitive relationship is familial by using <HisyeoWord is='litıwe'/>:
+
+<HisyeoTabs>
+    <p>motüo yë litıwe yë motüo noyo&emsp;<small>(lit. mother of relation of my mother)</small></p>
+</HisyeoTabs>
+
+---
+
+__Partitive Genitive__ - Specifies the preceding phrase as being part of some
+larger whole or set. "Which is part of" is an equivalent expression in English.
+Sometimes the preceding phrase only contains a quantity word or <HisyeoWord is='yogö'/>.
+
+<HisyeoTabs>
+    <p>yoüti yë mokon onö&emsp;<em>"some which is part of the food"</em> <small>(lit. some of the food)</small></p>
+    <p>yogö kut yë düi&emsp;<em>"first part which is part of two"</em> <small>(lit. first part of two)</small></p>
+</HisyeoTabs>
+
+You can clarify a genitive relationship is partitive by using <HisyeoWord is='yogö'/>:
+
+<HisyeoTabs>
+    <p>yoüti (yë) yogö yë mokon&emsp;<small>(lit. some of parts of food)</small></p>
+</HisyeoTabs>
+
+---
+
+__Attributive Genitive__ - Specifies the attached genitive phrase as being an
+attribute or innate quality of the preceding phrase. Semantically similar to
+regular modifier usage but more emphatic in its attribution.
+
+<HisyeoTabs>
+    <p>ilë yë ködus&emsp;<em>"sacred building"</em> <small>(lit. building of sacredness)</small></p>
+</HisyeoTabs>
+
+You can clarify a genitive relationship is attributive by using <HisyeoWord is='di'/>
+alone or <HisyeoWord is='yünyoü'/> and <HisyeoWord is='di'/>:
+
+<HisyeoTabs>
+    <p>ilë yë yünyoü yë di ködus&emsp;<em>(lit. building of possession of sacred trait)</em></p>
+</HisyeoTabs>
+
+---
+
+__Attributed Genitive__ - Specifies the preceding phrase as being an attribute
+or innate quality of the attached genitive phrase. "attributed to" or "is an
+attribute of" are equivalent English expressions. The opposite of Attributive
+Genitive. The preceding phrase must be a concept that can be considered an
+attribute and the attached genitive phrase must be a thing that can be
+attributed (and specifically can be attributed the thing that is the preceding
+phrase).
+
+<HisyeoTabs>
+    <p>hiyöli yë oksün&emsp;<em>"weakness attributed to muscles"</em> <small>(lit. weakness of muscles)</small></p>
+    <p>xowosë onö yë boxö kon wëloı xön.&emsp;<em>"the happiness attributed to a good work place"</em> <small>(lit. the happiness of a good working place)</small></p>
+</HisyeoTabs>
+
+You could clarify this genitive relationship using <HisyeoWord is='litıwe'/> although
+some directional ambiguity would remain:
+
+<HisyeoTabs>
+  <p>hiyöli yë litıwe yë oksün&emsp;<small>(lit. weakness of relation of muscles)</small></p>
+</HisyeoTabs>
+
+You could clarify this genitive relationship using <HisyeoWord is='di'/> although some
+directional ambiguity would remain:
+
+<HisyeoTabs>
+  <p>hiyöli yë di yë oksün&emsp;<small>(lit. weakness of a trait of muscles)</small></p>
+</HisyeoTabs>
+
+You could also try clarifying that even further using <HisyeoWord is='limien'/>:
+
+<HisyeoTabs>
+  <p>hiyöli yë di limien yë oksün&emsp;<small>(lit. weakness of an inner trait of muscles)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Material__ - Specifies the preceding phrase as being made of a
+material. "made out of" or "consisting of" are equivalent English expressions.
+
+
+<HisyeoTabs>
+  <p>oütö yë nomü otös&emsp;<em>"vehicle made out of hard wood"</em> <small>(lit. vehicle of hard wood)</small></p>
+</HisyeoTabs>
+
+You can clarify a genitive relationship is material by using <HisyeoWord is='küsowi'/>:
+
+<HisyeoTabs>
+  <p>oütö yë küsowi yë nomü otös&emsp;<small>(lit. vehicle of material of hard wood)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Content__ - Specifies the preceding phrase as containing within
+itself the attached genitive phrase. "full of" or "containing" or equivalent
+English expressions. Similar to the Material Genitive but the contents are a
+separate entity from the material of the container.
+
+<HisyeoTabs>
+  <p>zomo ximu yë micin&emsp;<em>"lake containing fish"</em> <small>(lit. water body of fish)</small></p>
+</HisyeoTabs>
+
+You can clarify a genitive relationship is material by using <HisyeoWord is='yünyoü'/> <HisyeoWord is='limien'/>:
+
+<HisyeoTabs>
+  <p>zomo ximu yë yünyoü limien yë micin&emsp;<small>(lit. water body of inner possession of fish)</small></p>
+</HisyeoTabs>
+
+---
+
+__Epexegetical Genitive__ - Specifies the attached genitive phrase as being
+another *separate* way to explain the preceding phrase. "which is", "that is",
+"namely", "who is" are equivalent English expressions.
+
+<HisyeoTabs>
+  <p>cüdo yë mokon&emsp;<em>"gift which is food"</em> <small>(lit. gift of food)</small></p>
+</HisyeoTabs>
+
+You can clarify this genitive relationship by using a subordinate clause and a
+copula instead of a genitive phrase:
+
+<HisyeoTabs>
+  <p>umo Olıs xe lı sütüö yë noyo&emsp;<em>"Alice, which is a friend of mine" (lit. person Alice which is a friend of me)</em></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Destination/Purpose__ - Specifies the destination or purpose that
+the preceding phrase is leading to. "for the purpose of", "destined for",
+"towards", "into" are equivalent English expressions.
+
+<HisyeoTabs>
+  <p>tömös yë umo xonluk&emsp;<em>"children's books"</em> <small>(lit. books of young people)</small></p>
+</HisyeoTabs>
+
+You can clarify this genitive relationship by using a subordinate clause with an
+inner <HisyeoWord is='oxon'/> preposition:
+
+<HisyeoTabs>
+  <p>tömös xe (lı gö) oxon umo xonluk&emsp;<small>(lit. books that are (existing) for young people)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Production__ - Specifies that the preceding phrase is made by the
+attached genitive phrase. "produced by" is an equivalent English expression.
+
+<HisyeoTabs>
+  <p>wölık yë mokon tüt&emsp;<em>"steam produced by the hot food"</em> <small>(lit. smoke/cloud of hot food)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is production by using <HisyeoWord is='oxon'/>:
+
+<HisyeoTabs>
+  <p>wölık yë kös yë mokon tüt&emsp;<small>(lit. smoke/cloud of result of hot food)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Product__ - Specifies that the preceding phrase is a producer of
+the attached genitive phrase. "which produces" is an equivalent English
+expression.
+
+<HisyeoTabs>
+  <p>non yë ösölë&emsp;<em>"movie which produces fear"</em> <small>(lit. movie/show of afraidness)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is a product by using <HisyeoWord is='öni'/> or <HisyeoWord is='foko'/>:
+
+<HisyeoTabs>
+  <p>non yë öni kös yë ösölë&emsp;<small>(lit. movie/show of causer of afraidness)</small></p>
+  <p>non yë foko ösölë&emsp;<small>(lit. movie/show of afraid-ifyer)</small></p>
+</HisyeoTabs>
+
+In fact, the first one using <HisyeoWord is='öni'/> still requires the second <HisyeoWord is='yë'/> because
+otherwise it would mean "an afraid causer" which is not the intending meaning.
+The second one, however, does not require either <HisyeoWord is='yë'/> because
+of its coupling nature.
+
+<HisyeoTabs>
+  <p>non foko ösölë&emsp;<small>(lit. movie/show of afraid-ifyer)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Separation__ - Specifies that the preceding phrase is separate
+from the attached genitive phrase. "out of", "away from" ,or simply "from" are
+equivalent English expressions.
+
+<HisyeoTabs>
+  <p>mönbılı mönbılı yë niün&emsp;<em>"far from them"</em> <small>(lit. far distance of them)</small></p>
+  <p>fonmot yë gos hönyo&emsp;<em>"clear from wild plants"</em> <small>(lit. absence of wild plants)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is separation by using a subordinate
+clause with <HisyeoWord is='di'/> and <HisyeoWord is='sün'/>:
+
+<HisyeoTabs>
+  <p>fonmot fos sün gos hönyo di&emsp;<em>"clear from wild plants"</em> <small>(lit. absence which from wild plants is becoming)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Source__ - Specifies the origin of the preceding phrase. "out of",
+"derived from", "dependent on" are equivalent English expressions. This genitive
+can often be bettered expressed using the sun thematic role marker.
+
+<HisyeoTabs>
+  <p>iskö cübü nexë yë fenüo Xonpën&emsp;<em> "wine out of Champagne"</em> <small>(lit. intoxicated fermented drink of region Champagne)</small></p>
+  <p>nomü yë ilë nokdo onö&emsp;<em>"wood derived from the old building"</em> <small>(lit. wood of old building)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is Source by using a subordinate
+clause with <HisyeoWord is='gö'/> and <HisyeoWord is='sün'/>:
+
+<HisyeoTabs>
+  <p>nomü xe (lı gö) sün ilë nokdo onö&emsp;<small>(lit. wood that is from old building)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Price/Value__ - Specifies the price or value of the preceding
+phrase. "for", "worth" are an equivalent English expressions. The attached
+genitive phrase must contain concepts of money, value or amount.
+
+<HisyeoTabs>
+  <p>mokon süwit yë düi muni&emsp;<em>"candy for two dollars"</em> <small>(lit. sweet food of two monies)</small></p>
+  <p>son küdu yë dus yönë&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is Price/Value by using <HisyeoWord is='wilüwo'/>:
+
+<HisyeoTabs>
+  <p>son küdu yë wilüwo yë dus yönë&emsp;<em>"three horses worth ten goats"</em> <small>(lit. three horses of ten goats)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Time__ - Specifies the time or duration of the preceding phrase.
+"during", "at", "within", "for" are equivalent English expressions. The attached
+genitive phrase must contain concepts of time or duration.
+
+<HisyeoTabs>
+  <p>tüu yë tukwos suhot&emsp;<em>"work for eight hours"</em> <small>(lit. action of eight hours)</small></p>
+  <p>woküt kon mokon yë suhot xëti&emsp;<em>"breakfast at seven o'clock"</em> <small>(lit. eating time of the seventh hour)</small></p>
+  <p>lö yë bıtün&emsp;<em>"movement during the night"</em> <small>(lit. movement of night)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is Time by using <HisyeoWord is='woküt'/>:
+
+<HisyeoTabs>
+  <p>tüu yë woküt yë tukwos suhot&emsp;<em>"work for eight hours"</em> <small>(lit. action of time of eight hours)</small></p>
+</HisyeoTabs>
+
+You can also clarify this relationship using a subordinate clause and the preposition <HisyeoWord is='hoi'/>:
+
+<HisyeoTabs>
+  <p>lö xe (lı gö) hoi bıtün&emsp;<em>"movement during the night"</em> <small>(lit. movement which is at night)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Place__ - Specifies a vague local relation to the preceding
+phrase. "in", "at", "through", "over" are equivalent English expressions. The
+attached genitive phrase must contain concepts of location. Often uses the words
+opotu or sekano.
+
+<HisyeoTabs>
+  <p>nıwos yë hönyo&emsp;<em>niwa je honja "cabin in the woods"</em> <small>(lit. residence of the wilderness)</small></p>
+  <p>kon tulutı noyo yë fenüo onö yë biömu nubuso.&emsp;<em>"my travels through the marsh"</em> <small>(lit. my traversings of the region of wet biome)</small></p>
+</HisyeoTabs>
+
+You can clarify that a genitive relationship is Place by using <HisyeoWord is='boxö'/>:
+
+<HisyeoTabs>
+  <p>nıwos yë boxö yë hönyo&emsp;<small>(lit. residence of place of wilderness)</small></p>
+</HisyeoTabs>
+
+You can also clarify this relationship using a subordinate clause and <HisyeoWord is='hoi'/>:
+
+<HisyeoTabs>
+  <p>nıwos xe (lı gö) hoi hönyo&emsp;<small>(lit. residence which is (existing) at the wilderness)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Means__ - Specifies the instrument or means of the preceding
+phrase. "by", "by means of" are equivalent English expressions. This genitive
+can often be better expressed using the wija thematic role marker.
+
+<HisyeoTabs>
+  <p>bilüs yë tüu mëdüson&emsp;<em>"achievement by hard work"</em> <small>(lit. victory of laborious work)</small></p>
+</HisyeoTabs>
+
+You can clarify this relationship using a subordinate clause and <HisyeoWord is='tö'/>:
+
+<HisyeoTabs>
+  <p>bilüs xe (lı gö) tö tüu mëdüson&emsp;<small>(lit. victory which is (existing) by means of laborious work)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Agency__ - Specifies the agent that is engaged with the preceding
+phrase. "by", "by means of" are equivalent English expressions. The attached
+genitive phrase must contain a person or other active entity to be seen as this
+type of genitive and often can be easily misconstrued as a Possessive Genitive.
+
+<HisyeoTabs>
+  <p>oklumun yë höktun cënbö nëlö&emsp;<em>"attack by means of a black bear"</em> <small>(lit. attack of a black large mammal)</small></p>
+</HisyeoTabs>
+
+You can clarify this relationship using a subordinate clause and <HisyeoWord is='tö'/>:
+
+<HisyeoTabs>
+  <p>oklumun xe (lı gö) tö höktun cënbö nëlö&emsp;tun takaha je te wija hoton cenpo nelo <small>(lit. attack which is by means of black large mammal)</small></p>
+</HisyeoTabs>
+
+---
+
+__Genitive of Reference__ - Specifies a reference entity that helps better
+explain the preceding phrase. "with reference to" or "with respect to" are
+equivalent English expressions. This genitive can often be bettered expressed
+using the so thematic role marker.
+
+<HisyeoTabs>
+  <p>eswen woküt yë tüu kon bëüdo noyo&emsp;<em>"more time with respect to my studies"</em> <small>(lit. more time of my learning work)</small></p>
+</HisyeoTabs>
+
+You can clarify this relationship using the connector <HisyeoWord is='en'/> instead
+of a genitive phrase:
+
+<HisyeoTabs>
+  <p>eswen woküt kon bëüdo en woküt yë tüu dizel&emsp;<small>(lit. more studying time than time of other work)</small></p>
+</HisyeoTabs>
+
+---
+
+__Subjective Genitive__ - Specifies or describes the subject of the preceding
+phrase when the preceding phrase is a verb phrase or a noun phrase that contains
+an action.  This genitive can always be converted into a sentence where the
+genitive noun phrase is the subject of the action. Some constructions could
+either be subjective or objective genitive but context can help identify the
+appropriate type.
+
+<HisyeoTabs>
+  <p>köto yë öni hobiyö onö&emsp;<em>"speech of the announcer"</em></p>
+  <p>lö yë höktun xömütlö cënbö&emsp;<em>"movement of whales"</em> <small>(lit. movement of big sea mammals)</small></p>
+</HisyeoTabs>
+
+You can also represent this genitive relationship by replacing the whole relation with
+a subordinate noun clause:
+
+<HisyeoTabs>
+  <p>fos höktun xömütlö cënbö lı lö, lı küzoü&emsp;<em>"movement of whales is awesome" (lit. that big sea mammals are moving, is awesome)</em></p>
+</HisyeoTabs>
+
+You can also clarify this genitive relationship with <HisyeoWord is='kös'/>:
+
+<HisyeoTabs>
+  <p>lö yë kös yë höktun xömütlö cënbö&emsp;<em>"movement of whales"</em> <small>(lit. movement of result of big sea mammals)</small></p>
+</HisyeoTabs>
+
+---
+
+__Objective Genitive__ - Specifies or describes the object of the preceding phrase
+when the preceding phrase is a transitive verb phrase or a noun phrase that
+contains a transitive action. "for", "about", "concerning", "towards", "against"
+are English equivalent expressions. This genitive can always be converted into a
+sentence where the genitive noun phrase is the object of the action.
+
+<HisyeoTabs>
+  <p>köto nü yë mocko&emsp;<em>"our conversation about cats"</em> <small>(lit. our speech of cats)</small></p>
+  <p>kelo yë fos sınsi noyo (lı gö) dën sınsi dizel onö&emsp;<em>"a game of my city against the other city"</em> <small>(lit. game of which my city (is) against another city)</small></p>
+</HisyeoTabs>
+
+You can clarify this genitive relationship by replacing the whole relation with
+a subordinate noun clause while describing the object (and <HisyeoWord is='kös'/> can
+be used to intepret "about" more appropriately):
+
+<HisyeoTabs>
+    <p>nü köto si sın yë selöhö yë mocko&emsp;<small>(lit. we said things of a topic of cats)</small></p>
+    <p>sınsi noyo kelo si dën sınsi dizel&emsp;<small>(lit. my city played against another city)</small></p>
+</HisyeoTabs>
+
+---
+
+__Plenary Genitive__ - Specifies or describes the subject and object of the
+preceding phrase when the preceding phrase is a verb phrase or a noun phrase
+that contains an action. Both subjective and objective genitive forms fit and
+the meanings should not contract but instead complement each other.
+
+<HisyeoTabs>
+    <p>kon yübik yë öcöto&emsp;<em>"love of God"</em> <small>(lit. loving of God)</small></p>
+</HisyeoTabs>
+
+You can clarify this genitive relationship by replacing the whole relation with
+a subordinate noun clause and <HisyeoWord is='xokön'/> <HisyeoWord is='dizel'/>:
+
+<HisyeoTabs>
+    <p>noyo ün öcöto yübik xokön dizel.&emsp;<small>(lit. I and God love each other)</small></p>
+</HisyeoTabs>
+
+:::
 
 This particle isn't used with the negatitive particle <HisyeoWord is='yök'/>
 because it's meant to describe nouns through associating other nouns and there's
