Add a bit about verbs as nouns

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -1072,10 +1072,22 @@ Converting from the other content types into nouns.
 ### Verbs
 
 When a verb acts as a noun, it represents an archetypal object that has or will
-be involved in the happening of that verb action. Like "-ed" in English but also
-there are many concrete terms that English has to refer to these entities
-already. These are direct objects, patients and themes that would be logical to
-use in a sentence where you use that verb.
+be involved in the happening of that verb action. Like the suffix "-ed" in
+English but also there are many concrete terms that English has to refer to
+these entities already. These are direct objects, patients and themes that would
+be logical to use in a sentence where you use that verb.
+
+<HisyeoTabs>
+    <p>nimü ke cöüfon mokon xe gıtno biek, ko.&emsp;<em>"Will you make me a sandwich?"</em> <small>(lit. You will cook food that is between bread, yes?)</small></p>
+</HisyeoTabs>
+
+Another way is to create a genitive phrase by preceding the modifier with
+the <HisyeoWord is='yë'/> particle. This particle means the verb word that
+immediately following it is taken as the noun derivation of that verb.
+
+<HisyeoTabs>
+    <p>müt noyo küu oköt dıbo öfo yë conwëbo&emsp;<em>"Bring me that box of goods"</em></p>
+</HisyeoTabs>
 
 ### Modifiers
 
@@ -1091,10 +1103,9 @@ argument to be skipped).
   <p>wölık nëlö kös küyö&emsp;<em>"Black clouds cause sadness."</em></p>
 </HisyeoTabs>
 
-
-Another way is to create a genitive phrase by preceding the modifier with the <HisyeoWord is='yë'/> particle.
-This particle means that whatever word type that the word immediately following
-it is, take the noun derivation of that word type.
+Just like with verbs you canc reate a genitive phrase by preceding the modifier
+with the <HisyeoWord is='yë'/> particle. This particle means that the modifier
+word that immediately following it is taken as the noun derivation of that word.
 
 This is especially useful for the typical reason that genitive phrases are
 useful: it allows you to describe a quality with some modifiers of its own. One
@@ -1103,7 +1114,6 @@ of the most common usages is when adding a degree to a modifier:
 <HisyeoTabs>
   <p>töxütsı bümi yë ıwotë ëto</p>
 </HisyeoTabs>
-
 
 Since Hisyëö has less than 800 words, using genitive phrases with modifiers
 allows you to create more complex phrases that would require several sentences
