Add more noun/verb docs

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -1074,19 +1074,61 @@ Converting from the other content types into nouns.
 When a verb acts as a noun, it represents an archetypal object that has or will
 be involved in the happening of that verb action. Like the suffix "-ed" in
 English but also there are many concrete terms that English has to refer to
-these entities already. These are direct objects, patients and themes that would
-be logical to use in a sentence where you use that verb.
+these entities already. There are four ways that verbs can be expressed as
+nouns.
+
+#### Direct/Thematic Objects
+
+When a verb is provided as a thematic object, it represents the archetypal
+object/patient/theme of that verb. This can be after verbs (direct objects) or
+after prepositions (thematic objects). In this position, they represent the
+nucleus of a noun phrase.
 
 <HisyeoTabs>
     <p>nimü ke cöüfon mokon xe gıtno biek, ko.&emsp;<em>"Will you make me a sandwich?"</em> <small>(lit. You will cook food that is between bread, yes?)</small></p>
 </HisyeoTabs>
 
-Another way is to create a genitive phrase by preceding the modifier with
-the <HisyeoWord is='yë'/> particle. This particle means the verb word that
-immediately following it is taken as the noun derivation of that verb.
+Here <HisyeoWord is='mokon'/> is being used as direct obect noun of the action
+"to cook". The thing that we cook (the position of the direct object) is called
+a "meal" and the thing that we eat is known as "food". Here, the "meal" is quite
+simply "food" in apposition.
+
+#### Genitive Phrases
+
+A highly useful kind of thematic relation is the genitive phrase directly
+following another noun phrase connected by the <HisyeoWord is='yë'/> particle.
 
 <HisyeoTabs>
     <p>müt noyo küu oköt dıbo öfo yë conwëbo&emsp;<em>"Bring me that box of goods"</em></p>
+</HisyeoTabs>
+
+#### Abstract Nouns
+
+There is a special coupling particle (<HisyeoWord is='kon'/>) that converts any
+content word directly after it into a noun with abstract connotations that can
+be translated into English as "matters of" or "acts of". Additionally, this form
+is often used as the equivalent of simple gerunds where there's no additional
+thematic context needed.
+
+<HisyeoTabs>
+    <p>timiok kon wëtodü yë towë wik pipök&emsp;<em>"bald eagle"</em> <small>(lit. hunting bird of white head feathers)</small></p>
+    <p>öntön züngö kon kelo yë kon doicël gundolë&emsp;<em>"baseball glove"</em> <small>(lit. playing hand glove of ball catching)</small></p>
+</HisyeoTabs>
+
+#### Agentive Nouns
+
+There are two more particles that can convert content words into nouns and they
+are both agentive in nature. This means that the final coupled noun is
+considered an agent of some action or state. For the first particle (<HisyeoWord is='öni'/>),
+the entity is a directly engaged in the action or experiencing the state. For
+the second particle (<HisyeoWord is='foko'/>), the agent is causing something
+else to engage in the action or experience the state.
+
+<HisyeoTabs>
+    <p>foko mefüs wowoë yë kon lö fiki&emsp;<em>"running shoes"</em><small>(lit. foot safe-causer of fast moving)</small></p>
+    <p>öni lö fiki&emsp;<em>"runner"</em><small>(lit. fast mover)</small></p>
+    <p>fecko foko hünsık&emsp;<em>"red paint"</em><small>(lit. red-causer liquid)</small></p>
+    <p>öni wëko yë fecko foko longı&emsp;<em>"painter"</em><small>(lit. placer of color-causer liquid)</small></p>
 </HisyeoTabs>
 
 ### Modifiers
@@ -1103,7 +1145,7 @@ argument to be skipped).
   <p>wölık nëlö kös küyö&emsp;<em>"Black clouds cause sadness."</em></p>
 </HisyeoTabs>
 
-Just like with verbs you canc reate a genitive phrase by preceding the modifier
+Just like with verbs you can create a genitive phrase by preceding the modifier
 with the <HisyeoWord is='yë'/> particle. This particle means that the modifier
 word that immediately following it is taken as the noun derivation of that word.
 
@@ -1115,7 +1157,7 @@ of the most common usages is when adding a degree to a modifier:
   <p>töxütsı bümi yë ıwotë ëto</p>
 </HisyeoTabs>
 
-Since Hisyëö has less than 800 words, using genitive phrases with modifiers
+Since Hisyëö has less than 900 words, using genitive phrases with modifiers
 allows you to create more complex phrases that would require several sentences
 to formulate otherwise. 
 
