--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -221,8 +221,8 @@ being some noun. This has the effect of meaning "is a [noun]" in English.
 ### Modifiers
 
 A modifier cannot act as a verb, it must be provided with the subject complement
-marker (<HisyeoWord is='lı'/>). This is called a **modifier complement**. The
-subject is being described as being some modifier (in some state). This has the
+marker (<HisyeoWord is='lı'/>). This is called an **adjective complement**. The
+subject is being described as being some adjective (in some state). This has the
 effect of meaning "is [adjective]" in English.
 
 ## Verb Modifiers
